@@ -46,6 +46,8 @@
 static void            xfce_displays_helper_class_init                     (XfceDisplaysHelperClass *klass);
 static void            xfce_displays_helper_init                           (XfceDisplaysHelper      *helper);
 static void            xfce_displays_helper_finalize                       (GObject                 *object);
+static void            xfce_displays_helper_channel_apply_legacy           (XfceDisplaysHelper      *helper,
+                                                                            const gchar             *scheme);
 static void            xfce_displays_helper_channel_property_changed       (XfconfChannel           *channel,
                                                                             const gchar             *property_name,
                                                                             const GValue            *value,
@@ -112,6 +114,9 @@ xfce_displays_helper_init (XfceDisplaysHelper *helper)
             /* monitor channel changes */
             g_signal_connect (G_OBJECT (helper->channel), "property-changed", 
                               G_CALLBACK (xfce_displays_helper_channel_property_changed), helper);
+
+            /* restore the default scheme */
+            xfce_displays_helper_channel_apply_legacy (helper, "Default");
         }
         else
         {
