@@ -4,6 +4,7 @@
 - Fix type in xfconf property name (debian bug #527238).
 - Fix mnemonic widgets in accessibility dialog (bug #5550).
 - Fix translation macros in settings helper (bug #5554).
+- Always restore the default displa scheme on startup (bug #5311).
 
 4.6.1
 =====
